@@ -48,6 +48,8 @@ Trunk (unreleased changes)
     HADOOP-1870 Once file system failure has been detected, don't check it again
                 and get on with shutting down the hbase cluster.
     HADOOP-1888 NullPointerException in HMemcacheScanner
+    HADOOP-1903 Possible data loss if Exception happens between snapshot and flush
+                to disk.
 
   IMPROVEMENTS
     HADOOP-1737 Make HColumnDescriptor data publically members settable
